--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -161,12 +161,12 @@ header {
   position: absolute;
   right: 0;
   margin-right: 10%;
-  margin-top: 3%;
+  margin-top: auto;
+  margin-bottom: auto;
   height: 60%;
   max-width: 80%;
 }
 #projectCarouselBACK {
-    position: absolute;
     opacity: 0;
     pointer-events: none;
 }
@@ -174,28 +174,22 @@ header {
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .carousel-caption{
-  position: absolute;
   height: 250px;
   background-color: rgb(75, 156, 211,0.8);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
   padding: 3%;
-  z-index: 1;
 }
 .carousel-control-prev:hover, .carousel-control-next:hover {
-    background: rgba(255,255,255,0.2);
-    height: 100%;
-}
-#captionContent {
-    position: relative;
-    z-index: 2;
+  background: rgba(255,255,255,0.2);
+  height: 100%;
 }
 .portBtn {
-    color: #151513;
-    background-color: rgba(210, 210, 210);
+  color: #151513;
+  background-color: rgba(210, 210, 210);
 }
 .portGitBtn {
-    color: #FFFCF2;
-    background-color: rgb(39, 39, 39);
+  color: #FFFCF2;
+  background-color: rgb(39, 39, 39);
 }
 
 
